MDEV-11529 : Fix plugin loading bug, that pops up on Ubuntu 16.04

Do not save pointers to backup_plugins_args[i].c_str(), until
backup_pluin_args vector is fully initialized, as the strings it
contains can be moved on subsequent push_back().